# pdbfairy

./: .gitignore  .travis.yml  README.md  gen_test.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
pdbfairy/: main.py
pdbfairy/commands/: find_interactions.py
tests/: loader.py  test_compare_interactions.py  test_find_interactions.py  test_find_pairs.py
tests/data/compare-interactions/: 3trz.tsv
tests/data/find-interactions/: 3trz.tsv
tests/data/output/: 3trz.json
