[tool.poetry]
name = "pdbfairy"
version = "0.1.3"
description = ""
authors = ["Danny Roberts"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
biopython = "^1.74"
numpy = "~1.23"
memoized = "^0.3.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
nose = "^1.3"
parameterized = "^0.7.0"

[tool.poetry.scripts]
pdbfairy = "pdbfairy.main:main"
